# KIV-CPP

./: .gitignore  CMakeLists.txt  README.md  data.txt  lipsum.txt  vstup.txt
cviceni/cv02/: CMakeLists.txt  Main.cpp  cv02.cpp
cviceni/cv03/: CMakeLists.txt  Main.cpp  cv03.cpp
cviceni/cv04/: 04_b_lambda_std.cpp  04_e_func_map.cpp  CMakeLists.txt  Main.cpp  cv04.cpp
cviceni/cv04/04/: CMakeLists.txt  analyzer.cpp  analyzer.h  main.cpp
cviceni/cv05/: CMakeLists.txt  Main.cpp
cviceni/cv05/05/: CMakeLists.txt  DataLoader.cpp  DataLoader.h  Drawing.cpp  Drawing.h  main.cpp  sample.csv
cviceni/cv06/: CMakeLists.txt  Main.cpp
cviceni/cv07/: CMakeLists.txt  Main.cpp
cviceni/cv07/hw07/: CMakeLists.txt  (+1 more)
cviceni/cv08/: CMakeLists.txt  Main.cpp
cviceni/cv09/: 09_c_generator.cpp  CMakeLists.txt  concepts.cpp  coroutines.cpp  math.cpp  math.cppm  modules.cpp
cviceni/cv10/: CMakeLists.txt  Main.cpp  cv10.cpp
cviceni/cv11/: CMakeLists.txt  analyzer.cpp  analyzer.hpp  drawing.cpp  drawing.hpp  generator.cpp  generator.hpp  main.cpp  shared.hpp
cviceni/cv12/: 12_base.cpp  CMakeLists.txt
exam/: CMakeLists.txt  FileManip.hpp  Main.cpp
mock_exam/: CMakeLists.txt  DataLoader.hpp  Main.cpp  Sentence.hpp  Text.hpp  Transformer.hpp
sp1/: CMakeLists.txt  DataLoader.cpp  DataLoader.h  Drawing.cpp  Drawing.h  Main.cpp  Transformable.cpp  Transformable.h  vstup.txt  zadani
sp2/: CMakeLists.txt  Main.cpp  main.cpp  mp.cpp  mp.hpp  mp.ixx  mp_arithmetic.cpp  mp_arithmetic.hpp  mp_arithmetic.ixx  mp_calc.cpp  mp_calc.ixx  mp_terminal.cpp  mp_terminal.hpp  zadani.txt
(+2 files in other folders)
