cmake_minimum_required(VERSION 3.23)
project(KIV_CPP)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory("${PROJECT_SOURCE_DIR}/cviceni/cv02")
add_subdirectory("${PROJECT_SOURCE_DIR}/cviceni/cv03")
add_subdirectory("${PROJECT_SOURCE_DIR}/cviceni/cv04")
add_subdirectory("${PROJECT_SOURCE_DIR}/cviceni/cv05")
add_subdirectory("${PROJECT_SOURCE_DIR}/cviceni/cv06")
add_subdirectory("${PROJECT_SOURCE_DIR}/cviceni/cv07")
add_subdirectory("${PROJECT_SOURCE_DIR}/sp1")
add_subdirectory("${PROJECT_SOURCE_DIR}/sp2")
